gen/DragonLangParser.java
// Generated from /Users/julien/IdeaProjects/dragonLang/src/main/resources/DragonLang.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DragonLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBER=1, STRING=2, NULL=3, IF=4, ELSEIF=5, ELSE=6, RETURN=7, TRUE=8, 
		FALSE=9, LOOP=10, CONTINUE=11, BREAK=12, GREATER_EQUAL=13, LESS_EQUAL=14, 
		EQUAL_EQUAL=15, NOT_EUQAL=16, OR_SIGN=17, PLUS_ASSIGN=18, PLUS_ONE=19, 
		MINUS_ASSIGN=20, MINUS_ONE=21, WORD=22, GREATER_THAN=23, LESS_THAN=24, 
		PLUS_SIGN=25, MINUS_SIGN=26, MULTIPLICATION=27, DIVISION=28, PERCENT=29, 
		AND_SIGN=30, VERTICAL_BAR=31, EXCLAMATION=32, EQUAL=33, COLON=34, SEMICOLON=35, 
		POINT=36, COMMA=37, BRACKET_LEFT=38, BRACKET_RIGHT=39, BRACE_LEFT=40, 
		BRACE_RIGHT=41, SQUARE_LEFT=42, SQUARE_RIGHT=43, QUOTATION_LEFT=44, QUOTATION_RIGHT=45, 
		AT_SIGN=46, DOLLAR=47, WS=48, RT=49, COMMENT=50, LINE_COMMENT=51;
	public static final int
		RULE_start = 0, RULE_line = 1, RULE_loopInit = 2, RULE_loopJudge = 3, 
		RULE_loopIncrease = 4, RULE_loopBlock = 5, RULE_callParam = 6, RULE_callBody = 7, 
		RULE_expr = 8, RULE_otherExpr = 9, RULE_ifexpr = 10, RULE_elseif = 11, 
		RULE_otherelse = 12, RULE_function = 13, RULE_ifBlockInKH = 14, RULE_blockInKH = 15, 
		RULE_params = 16, RULE_param = 17, RULE_array = 18, RULE_arraySub = 19, 
		RULE_object = 20, RULE_objectSub = 21, RULE_pair = 22, RULE_objectFunc = 23, 
		RULE_var = 24, RULE_varGetter = 25;
	public static final String[] ruleNames = {
		"start", "line", "loopInit", "loopJudge", "loopIncrease", "loopBlock", 
		"callParam", "callBody", "expr", "otherExpr", "ifexpr", "elseif", "otherelse", 
		"function", "ifBlockInKH", "blockInKH", "params", "param", "array", "arraySub", 
		"object", "objectSub", "pair", "objectFunc", "var", "varGetter"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NUMBER", "STRING", "NULL", "IF", "ELSEIF", "ELSE", "RETURN", "TRUE", 
		"FALSE", "LOOP", "CONTINUE", "BREAK", "GREATER_EQUAL", "LESS_EQUAL", "EQUAL_EQUAL", 
		"NOT_EUQAL", "OR_SIGN", "PLUS_ASSIGN", "PLUS_ONE", "MINUS_ASSIGN", "MINUS_ONE", 
		"WORD", "GREATER_THAN", "LESS_THAN", "PLUS_SIGN", "MINUS_SIGN", "MULTIPLICATION", 
		"DIVISION", "PERCENT", "AND_SIGN", "VERTICAL_BAR", "EXCLAMATION", "EQUAL", 
		"COLON", "SEMICOLON", "POINT", "COMMA", "BRACKET_LEFT", "BRACKET_RIGHT", 
		"BRACE_LEFT", "BRACE_RIGHT", "SQUARE_LEFT", "SQUARE_RIGHT", "QUOTATION_LEFT", 
		"QUOTATION_RIGHT", "AT_SIGN", "DOLLAR", "WS", "RT", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DragonLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DragonLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public TerminalNode EOF() { return getToken(DragonLangParser.EOF, 0); }
		public List<TerminalNode> RT() { return getTokens(DragonLangParser.RT); }
		public TerminalNode RT(int i) {
			return getToken(DragonLangParser.RT, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RT) {
				{
				{
				setState(52);
				match(RT);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			line();
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(59);
						match(RT);
						}
						}
						setState(62); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==RT );
					setState(64);
					line();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RT) {
				{
				{
				setState(70);
				match(RT);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	 
		public LineContext() { }
		public void copyFrom(LineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LineContinueContext extends LineContext {
		public TerminalNode CONTINUE() { return getToken(DragonLangParser.CONTINUE, 0); }
		public LineContinueContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineContinue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineContinue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineContinue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineReturnContext extends LineContext {
		public TerminalNode RETURN() { return getToken(DragonLangParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LineReturnContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineBreakContext extends LineContext {
		public TerminalNode BREAK() { return getToken(DragonLangParser.BREAK, 0); }
		public LineBreakContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineBreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineBreak(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineBreak(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineIfContext extends LineContext {
		public IfexprContext ifexpr() {
			return getRuleContext(IfexprContext.class,0);
		}
		public LineIfContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineClassContext extends LineContext {
		public Token name;
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public List<TerminalNode> WORD() { return getTokens(DragonLangParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(DragonLangParser.WORD, i);
		}
		public TerminalNode COLON() { return getToken(DragonLangParser.COLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(DragonLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DragonLangParser.COMMA, i);
		}
		public LineClassContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineClass(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineRawCallContext extends LineContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode COLON() { return getToken(DragonLangParser.COLON, 0); }
		public TerminalNode EQUAL() { return getToken(DragonLangParser.EQUAL, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DragonLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DragonLangParser.COMMA, i);
		}
		public LineRawCallContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineRawCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineRawCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineRawCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineExprContext extends LineContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LineExprContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineFuncContext extends LineContext {
		public TerminalNode WORD() { return getToken(DragonLangParser.WORD, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode POINT() { return getToken(DragonLangParser.POINT, 0); }
		public TerminalNode DOLLAR() { return getToken(DragonLangParser.DOLLAR, 0); }
		public LineFuncContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineFunc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineLoopContext extends LineContext {
		public TerminalNode LOOP() { return getToken(DragonLangParser.LOOP, 0); }
		public TerminalNode BRACKET_LEFT() { return getToken(DragonLangParser.BRACKET_LEFT, 0); }
		public LoopJudgeContext loopJudge() {
			return getRuleContext(LoopJudgeContext.class,0);
		}
		public TerminalNode BRACKET_RIGHT() { return getToken(DragonLangParser.BRACKET_RIGHT, 0); }
		public LoopBlockContext loopBlock() {
			return getRuleContext(LoopBlockContext.class,0);
		}
		public LoopInitContext loopInit() {
			return getRuleContext(LoopInitContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(DragonLangParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(DragonLangParser.SEMICOLON, i);
		}
		public LoopIncreaseContext loopIncrease() {
			return getRuleContext(LoopIncreaseContext.class,0);
		}
		public LineLoopContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLineLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLineLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLineLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new LineExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				expr(0);
				}
				break;
			case 2:
				_localctx = new LineReturnContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(RETURN);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << STRING) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << WORD) | (1L << MINUS_SIGN) | (1L << EXCLAMATION) | (1L << POINT) | (1L << BRACKET_LEFT) | (1L << BRACE_LEFT) | (1L << SQUARE_LEFT) | (1L << DOLLAR))) != 0)) {
					{
					setState(80);
					expr(0);
					}
				}

				}
				break;
			case 3:
				_localctx = new LineFuncContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==POINT || _la==DOLLAR) {
					{
					setState(83);
					_la = _input.LA(1);
					if ( !(_la==POINT || _la==DOLLAR) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(86);
				match(WORD);
				setState(87);
				function();
				}
				break;
			case 4:
				_localctx = new LineIfContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				ifexpr();
				}
				break;
			case 5:
				_localctx = new LineClassContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				((LineClassContext)_localctx).name = match(WORD);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(90);
					match(COLON);
					setState(91);
					match(WORD);
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(92);
						match(COMMA);
						setState(93);
						match(WORD);
						}
						}
						setState(98);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(101);
				object();
				}
				break;
			case 6:
				_localctx = new LineLoopContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				match(LOOP);
				setState(103);
				match(BRACKET_LEFT);
				setState(107);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(104);
					loopInit();
					setState(105);
					match(SEMICOLON);
					}
					break;
				}
				setState(109);
				loopJudge();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(110);
					match(SEMICOLON);
					setState(111);
					loopIncrease();
					}
				}

				setState(114);
				match(BRACKET_RIGHT);
				setState(115);
				loopBlock();
				}
				break;
			case 7:
				_localctx = new LineContinueContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(117);
				match(CONTINUE);
				}
				break;
			case 8:
				_localctx = new LineBreakContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(118);
				match(BREAK);
				}
				break;
			case 9:
				_localctx = new LineRawCallContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(119);
					var();
					setState(120);
					match(EQUAL);
					}
					break;
				}
				setState(124);
				var();
				setState(125);
				match(COLON);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << STRING) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << WORD) | (1L << MINUS_SIGN) | (1L << EXCLAMATION) | (1L << POINT) | (1L << BRACKET_LEFT) | (1L << BRACE_LEFT) | (1L << SQUARE_LEFT) | (1L << DOLLAR))) != 0)) {
					{
					setState(126);
					expr(0);
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(127);
						match(COMMA);
						setState(128);
						expr(0);
						}
						}
						setState(133);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopInitContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLoopInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLoopInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLoopInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopInitContext loopInit() throws RecognitionException {
		LoopInitContext _localctx = new LoopInitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loopInit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopJudgeContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopJudgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopJudge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLoopJudge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLoopJudge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLoopJudge(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopJudgeContext loopJudge() throws RecognitionException {
		LoopJudgeContext _localctx = new LoopJudgeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_loopJudge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopIncreaseContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopIncreaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopIncrease; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).enterLoopIncrease(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DragonLangListener ) ((DragonLangListener)listener).exitLoopIncrease(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DragonLangVisitor ) return ((DragonLangVisitor<? extends T>)visitor).visitLoopIncrease(this);
			else return visitor.visitChildren(this);
		}
	}
